# libsoc

./: .gitignore  404.html  AUTHORS  ChangeLog  LICENCE  Makefile  Makefile.am  NEWS  README  README.md  TODO  configure.ac  index.html  libsoc.pc.in  sitemap.xml
bindings/python/: Makefile.am  __init__.py  adc.py  gpio.py  gpio.py.in  gpio_python.c  i2c.py  libsoc_python.c  pwm.py  spi.py
c/: index.html
c/debug/: index.html
c/gpio/: index.html
c/i2c/: index.html
c/pwm/: index.html
c/spi/: index.html
contrib/board_files/: Makefile.am  apalis-imx6.conf  apalis-t30.conf  apalis-tk1.conf  artik_710.conf  beaglebone_black.conf  bubblegum.conf  chip.conf  colibri-imx6.conf  colibri-imx6ull.conf  colibri-imx6ullwb.conf  colibri-imx7-1GB.conf  colibri-imx7-512mb.conf  colibri-t20.conf  colibri-t30.conf  colibri-vf50.conf  colibri-vf61.conf  dragonboard410c.conf  dragonboard820c.conf  example.conf  hikey.conf  odroid_c2.conf  opos6ul_dev.conf  pocketbeagle.conf  raspberrypi3b-rev1v2.conf  raspberrypi3b-rev1v3.conf  sd600_eval.conf  tinkerboard_rk3288.conf
contrib/board_files/beaglebone/: libsoc_gpio.conf
contrib/board_files/bubblegum/: libsoc_gpio.conf
contrib/board_files/dragonboard/: libsoc_gpio.conf
contrib/board_files/dragonboard410c/: libsoc_gpio.conf
contrib/board_files/hikey/: libsoc_gpio.conf
js/: highlight.pack.js
lib/: Makefile  Makefile.am  adc.c  board.c  conffile.c  debug.c  file.c  gpio.c  i2c.c  pwm.c  spi.c  sysfs.c
lib/include/: gpio.h  libsoc_adc.h  libsoc_board.h  libsoc_conffile.h  libsoc_debug.h  libsoc_file.h  libsoc_gpio.h  libsoc_i2c.h  libsoc_pwm.h  libsoc_spi.h  libsoc_sysfs.h
mkdocs/: search_index.json
python/: index.html
roadmap/: TODO  adc  i2c  spi
static-docs/: README  mkdocs.yml
static-docs/docs/: c.md  index.md
static-docs/docs/c/: gpio.md  i2c.md  pwm.md
test/: Makefile  adc_test.c  adc_test.py  board_test.c  gpio_test.c  gpio_test.py  i2c_test.c  i2c_test.py  pwm_test.c  pwm_test.py  spi_test.c  spi_test.py  switched_led.py  test  test.c  test_configure.sh
